<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="category_default_personal">Personal</string>
    <string name="category_default_work">Work</string>
    <string name="category_default_shopping">Shopping List</string>
</resources>
