<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="category_list_label">Categories</string>
    <string name="about_detail_title">About</string>
    <string name="preference_title">Preferences</string>
</resources>
